--- a/examples/README
+++ b/examples/README
@@ -1,1 +1,3 @@
-# Example Code of Fortran
+# Examples
+
+For the explannation and the video please check out [Here](https://mohangiri1.github.io/Fortran/)
