--- a/examples/README
+++ b/examples/README
@@ -1,3 +1,3 @@
 # Examples
 
-For the explannation and the video please check out [Here](https://mohangiri1.github.io/Fortran/)
+For the explannation and the video please check out https://mohangiri1.github.io/Fortran/
