--- a/examples/README
+++ b/examples/README
@@ -1,3 +1,29 @@
 # Examples
+1. Finding the Root of the equation:
+  a. Bisection Method
+  b. Newton's Raphson Method
+2. Solution of Differential Equation:
+  a. Euler's Method
+  b. Runge Kutta Method second order
+  c. Runge Kutta Method fourth order
+3. Integration:
+  a. Simson's One third Rule
+  b. Trapezoidal Rule
+  c. Monte Carlo Integration in 1D
+  d. Monte Carlo Integration in 2D
+4. Lagrange Interpolation
+5. Estimating the Value of Pi using Monte Carlo Simulation
 
 For the explannation and the video please check out https://mohangiri1.github.io/Fortran/
+
+If you want to learn computational physics using Fortran, this could be an excellent resources for you to rely on. 
+
+# Easy to learn site:
+[https://mohangiri1.github.io/Fortran](https://mohangiri1.github.io/Fortran)
+
+# Fortran script files download location:
+[https://github.com/mohangiri1/Fortran/tree/main/examples](https://github.com/mohangiri1/Fortran/tree/main/examples)
+
+# Youtube Playlist:
+[https://www.youtube.com/MohanGiri](https://www.youtube.com/watch?v=f1Vn6x1-6rI&list=PL7p7K-N4TmQsI7KgdyKyh19sXWTd8UC28&ab_channel=MohanGiri)
+
